--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-github.com/thnaeff
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>thnaeff<title>
+</head>
+<body>
+  github.com/thnaeff
+</body>
+</html>
