--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>thnaeff</title>
 </head>
 <body>
-  <a href="github.com/thnaeff">github.com/thnaeff</a>
+  <a href="https://github.com/thnaeff">github.com/thnaeff</a>
 </body>
 </html>
